<resources>
    <string name="app_name" translatable="false">Inspiration</string>
    <string name="quote">Quote</string>
    <string name="quotes">Quotes</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="business_chip">Business</string>
    <string name="education_chip">Education</string>
    <string name="faith_chip">Faith</string>
    <string name="famous_chip">Famous</string>
    <string name="friendship_chip">Friendship</string>
    <string name="future_chip">Future</string>
    <string name="happiness_chip">Happiness</string>
    <string name="history_chip">History</string>
    <string name="inspirational_chip">Inspirational</string>
    <string name="life_chip">Life</string>
    <string name="literature_chip">Literature</string>
    <string name="love_chip">Love</string>
    <string name="nature_chip">Nature</string>
    <string name="politics_chip">Politics</string>
    <string name="proverb_chip">Proverb</string>
    <string name="religion_chip">Religion</string>
    <string name="science_chip">Science</string>
    <string name="success_chip">Success</string>
    <string name="technology_chip">Technology</string>
    <string name="wisdom_chip">Wisdom</string>
    <string name="account_button">Account button</string>
    <string name="random_quote">Random quote</string>
    <string name="enter_quote_hint">Enter quote</string>
    <string name="favorite_quotes">Favorite quotes</string>
    <string name="create">Create</string>
    <string name="create_quote">Create quote</string>
    <string name="enter_author">Enter author</string>
    <string name="select_tag">Select tag:</string>
    <string name="test_quote" translatable="false">The spirit, the will to win, and the will to excel, are the things that endure. These qualities are so much more important than the events that occur.</string>
    <string name="author">Author</string>
    <string name="share_button_description">Share button</string>
    <string name="download_button_description">Download button</string>
    <string name="add_quote_button_description">Add quote button</string>
    <string name="like_button_description">Like button</string>
    <string name="delete_quotes_button_description">Delete all quotes</string>
</resources>