<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.AddQuoteFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create quote"
            android:fontFamily="@font/architects"
            android:letterSpacing="0.2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>


    <EditText
        android:id="@+id/custom_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/enter_quote_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/custom_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="Enter author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_quote" />

    <TextView
        android:id="@+id/select_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Select tag:"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_author" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_tag">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_business"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_education"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_faith"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faith_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_famous"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/famous_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_friendship"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friendship_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_future"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_happiness"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happiness_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_history"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_inspirational"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inspirational_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_life"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_literature"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/literature_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_love"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_nature"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_politics"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_proverb"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proverb_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_religion"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_science"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_success"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_technology"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology_chip"
                android:textAppearance="@style/chipText" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_wisdom"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wisdom_chip"
                android:textAppearance="@style/chipText" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Button
        android:id="@+id/button_create_quote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create"
        android:textAppearance="@style/chipText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>